@@ -7,10 +7,13 @@ jEdit 5.1 version history
 Thanks to Björn "Vampire" Kautler, Jarek Czekalski, Thomas Meyer,
 Matthieu Casanova, Alan Ezust, Malathi, Vladimir Avdonin, Eric Le Lay,
 Darien Brown, Steve snarum-micron, EdorFaus, Brian Clapper, Uwe Stöhr,
-Marc Häfner, stone1343, Richard The, Dale Anson, and Maik Nijhuis for
-contributing to this release.
+Marc Häfner, stone1343, Richard The, Dale Anson, Benjamin Gmurczyk,
+and Maik Nijhuis for contributing to this release.
 
 {{{ Bug fixes
+
+- Fix #3597101 - Bad error handling when an invalid path is entered into
+  the VFS Browser directory input. (Patch# 3602318 Benjamin Gmurczyk)
 
 - Bug no. #3590540 revealed a performance problem in the ChunkCache, because
   every scroll action resulted in a tokenization of the really long line, which
